[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://music/thesong.wav" type="AudioStream" id=2]

[sub_resource type="Theme" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 1.0
margin_right = 2.0
margin_bottom = 2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.003
anchor_bottom = 0.998
margin_left = -2.0
margin_top = -1.0
margin_right = -2.07202
margin_bottom = -0.799988
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="RichTextLabel" parent="Panel"]
margin_left = 455.0
margin_top = 87.0
margin_right = 538.0
margin_bottom = 104.0
theme = SubResource( 1 )
text = "Buzzy Box"

[node name="playButton" type="Button" parent="Panel"]
margin_left = 413.0
margin_top = 132.0
margin_right = 566.0
margin_bottom = 173.0
hint_tooltip = "You need to add a toy first before you can play!"
disabled = true
text = "Play!"

[node name="connectinfobox" type="RichTextLabel" parent="Panel"]
margin_left = 732.0
margin_top = 9.0
margin_right = 1006.0
margin_bottom = 73.0
text = "Enter the local ip displayed by 
\"game mode\" in the lovense remote app in the box below then press \"connect\" to test the connection"

[node name="connectButton" type="Button" parent="Panel"]
margin_left = 729.0
margin_top = 114.0
margin_right = 1004.0
margin_bottom = 159.0
hint_tooltip = "This will simpley make sure the toy can be connected to"
text = "Connect"

[node name="text_enterip" type="LineEdit" parent="Panel"]
margin_left = 728.0
margin_top = 79.0
margin_right = 998.0
margin_bottom = 103.0
hint_tooltip = "enter device ip here"
text = "exmple: 192.168.55.2"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
margin_left = 10.0
margin_top = 561.0
margin_right = 357.0
margin_bottom = 594.0
text = "Find this project on github at
https://github.com/thefriendlycacti/buzzy-box"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="goto_settings" type="Button" parent="."]
margin_left = 750.0
margin_top = 536.0
margin_right = 1009.0
margin_bottom = 577.0
text = "Settings"

[connection signal="pressed" from="Panel/playButton" to="." method="_on_playButton_pressed"]
[connection signal="pressed" from="Panel/connectButton" to="." method="_on_connectButton_pressed"]
[connection signal="text_entered" from="Panel/text_enterip" to="." method="_on_text_enterip_text_entered"]
[connection signal="pressed" from="goto_settings" to="." method="_on_goto_settings_pressed"]
